# dvorakjp-romantable

./: Cargo.toml  LICENSE  Makefile  Pipfile  README.md  RELEASES.md  detect_duplicate.py  dvorakjp_prime.txt  dvorakjp_prime_with_emoji.txt  dvorakjp_rx.txt  emoji.txt  make_emoji.py
.devcontainer/: devcontainer.json
azookey/: custom_input_table.default.tsv  tmp_dvorakjp_prime.txt
data/romantable/: _sokuon.tsv  _symbols.tsv  a.tsv  b.tsv  c.tsv  d.tsv  f.tsv  g.tsv  h.tsv  j.tsv  k.tsv  l.tsv  m.tsv  n.tsv  p.tsv  q.tsv  r.tsv  s.tsv  t.tsv  v.tsv  w.tsv  x.tsv  y.tsv  z.tsv
google_japanese_input/: dvorakjp_prime.txt  dvorakjp_prime_with_emoji.txt
lib/: emoji.txt
src/: build_roman_table_with_emoji.rs  detect_duplicates.rs  lib.rs  main.rs
