[package]
name = "dvorakjp-romantable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "*"
